added user account, started work on apollo integration

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,12 @@
     @apply border-foreground/20;
   }
 }
+a {
+  padding: 4px;
+  border-radius: 4px;
+}
+a:hover {
+  padding: 4px;
+  border-radius: 4px;
+  background-color: hsl(var(--btn-background-hover));
+}
