--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,35 +2,80 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  :root {
-    --background: 200 20% 98%;
-    --btn-background: 200 10% 91%;
-    --btn-background-hover: 200 10% 89%;
-    --foreground: 200 50% 3%;
-  }
-
-  @media (prefers-color-scheme: dark) {
-    :root {
-      --background: 200 50% 3%;
-      --btn-background: 200 10% 9%;
-      --btn-background-hover: 200 10% 12%;
-      --foreground: 200 20% 96%;
-    }
-  }
+p {
+  @apply font-inter;
+  font-size: 18px;
+  color: #333333;
 }
 
-@layer base {
-  * {
-    @apply border-foreground/20;
-  }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @apply font-rubik;
+  color: #333333;
+}
+
+h1 {
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 1.2;
+  color: #ff4136;
+}
+h2 {
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 1.3;
+  color: #ff4136;
+}
+h3 {
+  font-size: 28px;
+  font-weight: 500;
+  line-height: 1.4;
+}
+h4 {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 1.5;
+}
+h5 {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.6;
+}
+h6 {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.6;
 }
 a {
   padding: 8px;
   border-radius: 4px;
+  color: #333333;
+}
+
+hr {
+  border: 1px solid #e0e0e0;
 }
 a:hover {
   padding: 8px;
   border-radius: 4px;
   background-color: hsl(var(--btn-background-hover));
 }
+:root {
+  --background: 200 20% 98%;
+  --btn-background: 200 10% 91%;
+  --btn-background-hover: 200 10% 89%;
+  --foreground: 200 50% 3%;
+}
+
+/* @media (prefers-color-scheme: dark) {
+  :root {
+    --background: 200 50% 3%;
+    --btn-background: 200 10% 9%;
+    --btn-background-hover: 200 10% 12%;
+    --foreground: 200 20% 96%;
+  }
+} */
