--- a/src/app/dashboard/page.module.css
+++ b/src/app/dashboard/page.module.css
@@ -8,4 +8,10 @@
   flex-direction: row;
   justify-content: space-around;
   width: 100%;
+  height: 100vh;
+}
+
+.favorites {
+  border-right: 1px solid #e0e0e0;
+  height: 100%;
 }
