company details on dashboard screen

--- a/src/app/dashboard/page.module.css
+++ b/src/app/dashboard/page.module.css
@@ -1,8 +1,3 @@
-.org {
-  margin: 4px;
-  padding: 4px;
-}
-
 .container {
   display: flex;
   flex-direction: row;
@@ -13,5 +8,11 @@
 
 .favorites {
   border-right: 1px solid #e0e0e0;
+  height: 100%;
+  flex: 1;
+}
+
+.feed {
+  flex: 1;
   height: 100%;
 }
