--- a/src/components/company_card/CompanyCard.module.css
+++ b/src/components/company_card/CompanyCard.module.css
@@ -12,3 +12,9 @@
 .card:hover {
   background-color: hsl(var(--btn-background-hover));
 }
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
