--- a/src/app/dashboard/[company]/CompanyPage.module.css
+++ b/src/app/dashboard/[company]/CompanyPage.module.css
@@ -1,33 +1,39 @@
 .company {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    width: 100%;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin-bottom: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 10px;
 }
 
 .company_logo {
-    width: 200px;
-    height: 200px;
-    border-radius: 10%;
-    margin-bottom: 20px;
+  width: 200px;
+  height: 200px;
+  border-radius: 10%;
+  margin-bottom: 20px;
 }
 
 .person {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding: 10px;
-    border-bottom: 1px solid #ccc;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
 }
 .person_photo {
-    width: 100px;
-    height: 100px;
-    border-radius: 10%;
-    margin-right: 20px;
+  width: 100px;
+  height: 100px;
+  border-radius: 10%;
+  margin-right: 20px;
 }
 
+.emails {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
