--- a/src/components/company_card/CompanyCard.module.css
+++ b/src/components/company_card/CompanyCard.module.css
@@ -7,6 +7,7 @@
   background-color: hsl(var(--card-background));
   box-shadow: 0 0.5rem 1rem hsl(var(--shadow));
   transition: background-color 0.3s;
+  width: 800px;
 }
 
 .card:hover {
@@ -17,4 +18,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.emails {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 150px;
+  overflow-y: auto;
+  padding: 1em;
 }
