--- a/src/components/company_card/CompanyCard.module.css
+++ b/src/components/company_card/CompanyCard.module.css
@@ -7,7 +7,8 @@
   background-color: hsl(var(--card-background));
   box-shadow: 0 0.5rem 1rem hsl(var(--shadow));
   transition: background-color 0.3s;
-  width: 800px;
+  width: 500px;
+  cursor: pointer;
 }
 
 .card:hover {
@@ -16,6 +17,8 @@
 
 .container {
   display: flex;
+  flex-direction: row;
+
   justify-content: space-between;
   align-items: center;
 }
@@ -27,4 +30,18 @@
   height: 150px;
   overflow-y: auto;
   padding: 1em;
+}
+
+.details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 150px;
+  overflow-y: auto;
+  padding: 1em;
+}
+
+.active {
+  background-color: hsl(var(--btn-background));
 }
