--- a/src/components/company_card/CompanyCard.module.css
+++ b/src/components/company_card/CompanyCard.module.css
@@ -1,8 +1,11 @@
 .card {
   display: flex;
+  width: 100%;
+  max-width: 1920px;
   flex-direction: row;
   justify-content: space-between;
-  align-items: start;
+  text-align: center;
+  align-items: center;
   padding: 1rem;
   border-radius: 0.5rem;
   background-color: hsl(var(--card-background));
@@ -11,12 +14,20 @@
   cursor: pointer;
 }
 
-.card:hover {
+/* .card:hover {
   background-color: hsl(var(--btn-background-hover));
+} */
+
+.company_logo {
+  width: 64px;
+  height: 64px;
+  border-radius: 10%;
 }
 
 .links {
-  flex: 0 0 25%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   text-align: end;
 }
 
