--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@ p,
 li,
 a {
   @apply font-inter;
-  font-size: 18px;
+  font-size: 2vw;
   color: #333333;
 }
 
@@ -21,39 +21,39 @@ h6 {
 }
 
 h1 {
-  font-size: 48px;
+  font-size: 2vw;
   font-weight: 700;
   line-height: 1.2;
   color: #ff4136;
 }
 h2 {
-  font-size: 36px;
+  font-size: 7vw;
   font-weight: 600;
   line-height: 1.3;
   color: #ff4136;
 }
 h3 {
-  font-size: 28px;
+  font-size: 6vw;
   font-weight: 500;
   line-height: 1.4;
 }
 h4 {
-  font-size: 24px;
+  font-size: 2vw;
   font-weight: 500;
   line-height: 1.5;
 }
 h5 {
-  font-size: 20px;
+  font-size: 4vw;
   font-weight: 500;
   line-height: 1.6;
 }
 h6 {
-  font-size: 18px;
+  font-size: 3vw;
   font-weight: 400;
   line-height: 1.6;
 }
 a {
-  padding: 8px;
+  padding: 2vw;
   border-radius: 4px;
   color: #333333;
 }
