--- a/src/components/company_details/CompanyPage.module.css
+++ b/src/components/company_details/CompanyPage.module.css
@@ -1,5 +1,4 @@
 .container {
-  max-width: 1200px;
   margin-left: 1em;
 }
 .company {
@@ -8,42 +7,36 @@
   align-items: center;
   justify-content: space-around;
   width: 100%;
-  padding: 20px;
   border-bottom: 1px solid #ccc;
   margin-bottom: 10px;
-}
-
-.company_logo {
-  width: 200px;
-  height: 200px;
-  border-radius: 10%;
-  margin-bottom: 20px;
 }
 
 .person {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 10px;
   border-bottom: 1px solid #ccc;
 }
 .person_photo {
-  width: 100px;
-  height: 100px;
+  width: 64px;
+  height: 64px;
   border-radius: 10%;
   margin-right: 20px;
 }
 
 .person_info {
-  flex: 4;
+  display: flex;
+  flex: 1;
 }
 
-/* .person_links {
-  flex: 1;
-} */
+.person_links {
+  display: flex;
+}
 
 .emails {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
   justify-content: center;
 }
