--- a/src/components/company_card/CompanyCard.module.css
+++ b/src/components/company_card/CompanyCard.module.css
@@ -16,7 +16,7 @@
 }
 
 .links {
-  flex: 0 0 25%;
+  flex: 0 0 30%;
   text-align: end;
 }
 
@@ -32,4 +32,47 @@
 
 .active {
   background-color: hsl(var(--btn-background));
+}
+
+.card_wide {
+  display: flex;
+  width: 100%;
+  max-width: 1920px;
+  flex-direction: row;
+  justify-content: space-between;
+  text-align: center;
+  align-items: center;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  background-color: hsl(var(--card-background));
+  box-shadow: 0 0.5rem 1rem hsl(var(--shadow));
+  transition: background-color 0.3s;
+  cursor: pointer;
+}
+
+/* .card:hover {
+  background-color: hsl(var(--btn-background-hover));
+} */
+
+.company_logo_wide {
+  width: 64px;
+  height: 64px;
+  border-radius: 10%;
+}
+
+.links_wide {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-align: end;
+}
+
+.details_wide {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 150px;
+  overflow-y: auto;
+  padding: 1em;
 }
