moved csv export to feed

--- a/src/app/dashboard/feed/Feed.module.css
+++ b/src/app/dashboard/feed/Feed.module.css
@@ -21,6 +21,13 @@
   overflow-y: scroll;
 }
 
+.feedMenu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 1em;
+}
+
 .details {
   flex: 1;
   flex-direction: column;
