fixed scrolling and default filters

--- a/src/components/NavPanel/NavPanel.module.css
+++ b/src/components/NavPanel/NavPanel.module.css
@@ -1,3 +1,9 @@
 .activeMenu {
   background-color: hsl(var(--btn-background));
 }
+.container {
+  display: flex;
+  width: 100%;
+  max-width: 1800px;
+  margin: 0 auto;
+}
