--- a/src/components/company_details/CompanyPage.module.css
+++ b/src/components/company_details/CompanyPage.module.css
@@ -42,8 +42,8 @@
 .emails {
   display: flex;
   flex-direction: column;
-  align-items: start;
-  justify-content: start;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 .email {
