fixed missing avatar_url and user_name from users table

--- a/src/app/Index.module.css
+++ b/src/app/Index.module.css
@@ -111,9 +111,9 @@
     padding: 20px;
   }
   .features {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, auto);
+    display: block;
+    margin: 0 auto;
+    max-width: 650px;
   }
   .heroCard {
     width: 60%;
@@ -138,6 +138,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, auto);
+    max-width: 1000px;
   }
   .about {
     width: 50%;
