--- a/src/app/dashboard/feed/Feed.module.css
+++ b/src/app/dashboard/feed/Feed.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  min-height: 100vh;
+  height: calc(100vh - 150px);
   width: 100%;
   max-width: 1800px;
   margin: 0 auto;
@@ -21,7 +21,7 @@
 
 .feed {
   border-right: 1px solid #e0e0e0;
-  height: 100vh;
+  height: calc(100vh - 150px);
   overflow-y: scroll;
   overflow-y: scroll0px;
   flex-shrink: 0;
